<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UI.RegisterActivity">

    <!--注册-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <!--图标-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/top_picture"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_brand"
                android:visibility="visible" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="28sp" />

        </LinearLayout>
        <!--信息输入-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:layout_weight="0.5"
            android:animateLayoutChanges="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_et_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="6dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/account" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameRegisterWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:hint="@string/prompt_username"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:textColor="#000000" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_et_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="6dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/password" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordRegisterWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@null"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:textColor="#000000" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_login"
                android:hint="@string/prompt_message_login"
                android:textColorHint="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
